--- a/openaccess.tex
+++ b/openaccess.tex
@@ -1,3 +1,8 @@
+\section*{Resumen}
+Con el volumen creciente de conocimiento publicado y la creciente proliferación de revistas científicas, muchas editoriales y revistas han optado por hacer negocio de ello pidiendo una retribución a los autores que quieran publicar en sus revistas, pero también a todo usuario que desee leer o acceder esas publicaciones, llegando a veces a solicitar una suscripción. Las revistas y editoriales no escatiman fijando sus precios, por lo que muchas de estas publicaciones son innacesibles por usuarios, escuelas, negocios o incluso algunas instituciones que cuentan con menos capital, por ejemplo, las universidades en India o en cualquier país en vía de desarrollo.     
+
+En este artículo se habla del open acces como solución a esas fronteras que limitan el acceso a la información. Se hablará del modelo tradicional de publicación y las amenazas que este presenta actualmente, trataremos distintas soluciones e iniciativas y hablaremos de la legislación a favor de este modo de acceso a la información.
+ 
 \section{Introducción}
 
 Fue en 1665 cuando aparecieron las primeras revistas científicas en París y Londres y ya entonces a los autores no se les retribuía por publicar en ellas. El éxito de estas revistas tras su aparición fue directo, pues los lectores encontaron una forma de leer el trabajo de otras personas más rápido que leyendo un libro,  
