--- a/openaccess.tex
+++ b/openaccess.tex
@@ -37,7 +37,7 @@ Elsevier se vio implicado en otro escándalo, esta vez en el campo de la medicin
 
 Los ejemplos anteriores son solo una demostración de los tipos de escándalos en los que Elsevier ha estado involucrada, hay bastantes más. Esto demuestra que Elsevier solo quiere ganar dinero, y no está interesada realmente en el avance científico.
 
-\section{OA: soluciones e iniciativas}\label{iniciativas}
+\section{Open Access: soluciones e iniciativas}\label{iniciativas}
 
 Desde la publicación del manifiesto de la Budapest OA Initiative \cite{boai} en 2002, han surgido distintas iniciativas que tratan de promover la publicación científica en acceso abierto. Estos estímulos proceden de distintas fuentes, tanto del ámbito gubernamental como el editorial, e incluso de personas concretas cuyos proyectos han afectado al curso del acceso libre a la ciencia.
 
