--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -37,6 +37,9 @@
 \usepackage{amsfonts, amsmath, amsthm, amssymb} % For math fonts, symbols and environments
 \usepackage{wrapfig} % Allows wrapping text around tables and figures
 
+\usepackage[utf8x]{inputenc} %tildes
+\usepackage[T1]{fontenc}
+
 \begin{document}
 
 %----------------------------------------------------------------------------------------
@@ -49,15 +52,14 @@
 % The widths of these boxes can be easily edited to accommodate your content as you see fit
 
 \begin{minipage}[b]{1\linewidth}
-  \VeryHuge \color{NavyBlue} \textbf{Autonomous robot navigation in mixed environment} \color{Black}\\ % Title
+  \VeryHuge \color{NavyBlue} \textbf{Open Access: revisión histórica y situación actual} \color{Black}\\ % Title
   %\Huge\textit{Country Update}\\[2.4cm] % Subtitle
 
   \vspace{1cm} % A bit of extra whitespace between the header and poster content
 
-  \huge \textbf{Avi Naftalis}\\[0.6cm] % Author(s)
-  \huge Advisor: Proffesor Gal Kaminka \\[0.5cm] % advisor
-  \huge Bar-Ilan university, department of computer science \\[0.5cm] % University/organization
-  %\Large \texttt{saibi-hakim@mine.kyushu-u.ac.jp} --- +81 (092) 802 3316\\
+  \huge \textbf{Cristina Heredia}\\[0.6cm] % Author(s)
+  \huge \textbf{David Charte}\\[0.5cm] % advisor
+  \huge \textbf{Alejandro Alcalde} \\[0.5cm] % University/organization
 \end{minipage}
 %
 \begin{minipage}[b]{0.25\linewidth}
@@ -77,20 +79,14 @@
 
   %\color{Navy} % Navy color for the abstract
 
-  %\begin{abstract}
-  %The electrical energy from renewables in Algeria contributed about 3.4\% (280 MW) in 2008 of a total power of 8.1 GWe and will reach 5\% by the year 2017 according to the Algerian Electricity and Gas Regulation Commission (CREG). The country’s target is reaching 40\% by 2030. The geothermal resources in Algeria are of low-enthalpy type. Most of these geothermal resources are located in the north of the country and generate a heat discharge of 240 MWt.
-  %\end{abstract}
-
-
   %----------------------------------------------------------------------------------------
   %   Introduction
   %----------------------------------------------------------------------------------------
 
   \color{Black} % SaddleBrown color for the introduction
-  \section*{Introduction}
+  \section*{Introducción}
   \begin{itemize}
-  \item Models of crowd behavior predict human group behavior
-  \item Implementing such model (SCT- Social comparison Theory) using ROS
+  \item s
   \end{itemize}
 
 
