--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -39,6 +39,14 @@
 
 \usepackage[utf8x]{inputenc} %tildes
 \usepackage[T1]{fontenc}
+\usepackage{tikz}
+
+\definecolor{oldgold}{rgb}{0.81, 0.71, 0.23}
+\definecolor{palegreen}{rgb}{0.6, 0.98, 0.6}
+\definecolor{gray}{rgb}{0.5, 0.5, 0.5}
+\definecolor{kellygreen}{rgb}{0.3, 0.73, 0.09}
+
+\newcommand{\tikzcircle}[2][red,fill=red]{\tikz[baseline=-0.5ex]\draw[#1,radius=#2] (0,0) circle ;}%
 
 \begin{document}
 
@@ -86,7 +94,29 @@
   \color{Black} % SaddleBrown color for the introduction
   \section*{Introducción}
   \begin{itemize}
-  \item s
+  \item En 1665 aparecen primeras revistas, a los autores no se les pagaba por publicar en ellas.
+  \item Ya que éstas se hicieron populares, los autores siguieron publicando en ellas, por impacto más que por dinero.
+  \item \textbf{Problema:} Los precios comenzaron a subir hasta hacerse inasequibles. Hasta la aparición de internet como alternativa. Sin embargo, las revistas siguen cobrando demasiado en la actualizad, a pesar de no tener a penas gastos de publicación y edición.
+  \end{itemize}
+
+  \section*{Open Access (OA)}
+  \begin{itemize}
+  \item Tras la llegada de internet, nació \textbf{Open Access}, una forma de \textbf{acceder a la información}, no un \textbf{modelo de negocio}. Permite acceder a la información de \textbf{forma gratuita}. NO es incompatible con el uso de CopyRight.
+  \item Alternativa al modelo tradicional, donde los autores a veces \textbf{pagan} por publicar y los lectores también deben \textbf{pagar} por acceder a las publicaciones.
+  \item \textit{Formas de fomentar OA}
+    \begin{itemize}
+    \item Dejar una copia del artículo en un repositorio OA (\textbf{arXiv}).
+    \item Publicar en revistas OA (\textbf{BioMed, Public Library of Science}).
+    \item Subir una copia del artículo original a una web personal.
+    \item Publicar en revistas híbridas, donde el autor paga para hacer el artículo OA.
+    \end{itemize}
+  \item Las revistas OA siguen un código de colores:
+    \begin{itemize}
+    \item[] \tikzcircle[oldgold, fill=oldgold]{50pt} Acceso libre sin retraso.
+    \item[] \tikzcircle[kellygreen, fill=kellygreen]{50pt} Permite el archivo de trabajos ya publicados.
+    \item[] \tikzcircle[palegreen, fill=palegreen]{50pt} Permite el archivo de trabajos que se han mandado a revisión pero aún no publicados.
+    \item[] \tikzcircle[gray, fill=gray]{50pt} Indica que no cumple ninguna de las anteriores.
+    \end{itemize}
   \end{itemize}
 
 
