adding problems and scandals

--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -39,7 +39,13 @@
 
 \usepackage[utf8x]{inputenc} %tildes
 \usepackage[T1]{fontenc}
+\usepackage[hmargin=3cm,vmargin=2cm]{geometry}
+%\usepackage[dvipsnames*,svgnames]{xcolor}
+\usepackage[most]{tcolorbox}
+\usepackage{varwidth}
 
+
+  
 \begin{document}
 
 %----------------------------------------------------------------------------------------
@@ -95,18 +101,35 @@
   %----------------------------------------------------------------------------------------
 
   \color{Black} % SaddleBrown color for the introduction
-  \section*{Project's Objectives}
+  \section*{Modelo tradicional: problemática y escándalos}
   %
   \begin{itemize}
-  \item Gather information on other agents in environment based on
+  \item $\downarrow$ Coste de publicación, maquetación y distribución VS $\uparrow$ coste de revistas
+  \item Bases de la carrera investigadora:
     \begin{itemize}
-    \item speed
-    \item direction
-    \item distance
+    \item publicacionesde calidad 
+    \item en revistas de calidad
     \end{itemize}
-  \item Synchronize movement with similar agents
-  \item Move while avoiding obstacles (e.g. walls, other robots)
+  \item Los investigadores revisan de forma voluntaria
+  \item Editoriales sacan beneficios elevados aprovechando el voluntariado (Elsevier, Springer) 
+  \item Boicot a Elsevier por varios investigadores
+  \item Coste de la revista (precio por pág)
+ \begin{itemize}
+    \item The Annals of Mathematics- 0.13/pág
+    \item Elsevier -1.30/pág
+    \end{itemize}
+  \item Escándalos de Elsevier:
+    \begin{itemize}
+  	\item citaciones mutuas de Elsevier con  Chaos, Solitions \& Fractals
+  	\item recibió dinero de farmaceuticas para publicar artículos
+  	\end{itemize}
   \end{itemize}
+	
+%\framebox[1.1\width]{\normalsize\textbf{The Annals of Mathematics}\newline \text{hola}} \framebox[1.1\width]{Guess I’m framed now!} 
+
+%\colorbox{black!85}{\makebox[4em]{\strut\textcolor{white}{0.13}}}
+%\colorbox{black!85}{\makebox[4em]{\strut\textcolor{white}{1.30}}}
+	 
 
   %------------------------------------------------
   %----------------------------------------------------------------------------------------
