--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -120,7 +120,7 @@
 
   Ya que éstas se hicieron populares, los autores siguieron publicando en ellas, por impacto más que por dinero.
 
-  \textbf{Problema:} Los precios comenzaron a subir hasta hacerse inasequibles. Hasta la aparición de internet como alternativa. Sin embargo, las revistas siguen cobrando demasiado en la actualizad, a pesar de no tener a penas gastos de publicación y edición.
+  \textbf{Problema:} Los precios comenzaron a subir hasta hacerse inasequibles. Hasta la aparición de internet como alternativa. Sin embargo, las revistas siguen cobrando demasiado en la actualidad, a pesar de no tener apenas gastos de publicación y edición.
   
 \end{tcolorbox}
 
@@ -128,9 +128,9 @@
 \begin{tcolorbox}[colback=openaccess!5!white,colframe=openaccess!75!black,boxsep=1cm]
   \setlength{\parskip}{0.5cm}
   
-\textbf{Open Access} es una forma de \textbf{acceder a la información}, no un modelo de negocio. Permite \textbf{acceso gratuito}. Compatible con el uso de copyright. Alternativa al modelo tradicional, donde los lectores también deben pagar por acceder a las publicaciones.
+\textbf{Open Access} es una forma de \textbf{acceder a la información}, no un modelo de negocio. Permite \textbf{acceso gratuito}. Compatible con el uso de copyright. Alternativa al modelo tradicional, donde los lectores deben pagar por acceder a las publicaciones.
 
-Formas de fomentar OA
+Formas de fomentar OA:
     \begin{itemize}
     \item Dejar una copia del artículo en un repositorio OA (\textbf{arXiv}).
     \item Publicar en revistas OA (\textbf{BioMed, Public Library of Science}).
@@ -164,7 +164,7 @@ Formas de fomentar OA
     
     Los investigadores revisan de forma voluntaria. Editoriales sacan beneficios elevados aprovechando el voluntariado (Elsevier, Springer).
 
-    Coste de la revista (precio por pág)
+    Coste de la revista (precio por pág):
     \begin{itemize}
     \item The Annals of Mathematics: 0.13/pág
     \item Elsevier: 1.30/pág
