--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -193,7 +193,7 @@ Formas de fomentar OA:
   2012 & Legislación del Reino Unido para liberar la investigación del Department for International Development\\
   2013 & Estados Unidos aprueba el \textit{Fair Access to Science and Technology Research Act}\vspace{1em}\\
   2015 & Boicot a  \textit{Lingua} de su equipo editorial\\
-  2016 & Llamada a la acción de Amsterdan para la ciencia abierta en Europa\\
+  2016 & Llamada a la acción de Amsterdam para la ciencia abierta en Europa\\
   2017 & Más de 10000 revistas Open Access en el DOAJ\vspace{2em}\\
   2020 & Todas las publicaciones científicas financiadas públicamente en la UE podrían ser de libre acceso\\
   \end{tabular}
